force-app/main/default/objects/TPR__c/TPR__c.object-meta.xml
<CustomObject>
    <label>TPR</label>
    <nameField>
        <displayFormat>TPR-{0000}</displayFormat>
        <label>TPR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>