force-app/main/default/objects/TPR__c/fields/Date_Parent_Served__c.field-meta.xml
<CustomField>
    <fullName>Date_Parent_Served__c</fullName>
    <label>Date Parent Served</label>
    <type>Date</type>
</CustomField>