force-app/main/default/objects/TPR__c/fields/Method_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Service__c</fullName>
    <label>Method of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personally Served</fullName>
            </value>
            <value>
                <fullName>Served by Mail</fullName>
            </value>
            <value>
                <fullName>Served in Court</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>