force-app/main/default/objects/TPR__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentName</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>TPRs</relationshipLabel>
    <relationshipName>TPRs</relationshipName>
    <type>Lookup</type>
</CustomField>