force-app/main/default/objects/TPR__c/fields/Termination__c.field-meta.xml
<CustomField>
    <fullName>Termination__c</fullName>
    <label>Termination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parental Custodial rights terminated without post adoption contact rights</fullName>
            </value>
            <value>
                <fullName>Parental Custodial rights terminated with post adoption contact rights</fullName>
            </value>
            <value>
                <fullName>Parental Death</fullName>
            </value>
            <value>
                <fullName>Voluntary relinquishment without post adoption contact</fullName>
            </value>
            <value>
                <fullName>Voluntary relinquishment with post adoption contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>