force-app/main/default/objects/TPR__c/fields/Termination_Appealed__c.field-meta.xml
<CustomField>
    <fullName>Termination_Appealed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termination Appealed</label>
    <type>Checkbox</type>
</CustomField>