force-app/main/default/objects/TPR__c/fields/TPR_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>TPR_Decision_Date__c</fullName>
    <label>TPR Decision Date</label>
    <type>Date</type>
</CustomField>