force-app/main/default/objects/TPR__c/fields/TPR_Status__c.field-meta.xml
<CustomField>
    <fullName>TPR_Status__c</fullName>
    <label>TPR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPR Granted</fullName>
            </value>
            <value>
                <fullName>TPR Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>